--- a/app/core/static/core/css/blendShortages.css
+++ b/app/core/static/core/css/blendShortages.css
@@ -65,3 +65,13 @@ tr[needsCount="needsCount"] {
     right: 0;
     top: 0;
 }
+
+.blendStillNeeded {
+    animation: pulsingBlue 2s ease-in-out infinite;
+}
+
+@keyframes pulsingBlue {
+    0% { background-color: transparent; }
+    50% { background-color: rgba(255, 62, 62, 0.804); }
+    100% { background-color: transparent; }
+}
