--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -46,6 +46,8 @@
                     <th scope="col" class="text-center">Total Short</th>
                     <th scope="col" class="text-center">Schedule Status</th>
                     <th scope="col" class="text-center">Shortage AFTER BLENDS</th>
+                    <th scope="col" class="text-center"></th>
+                    
                     {% if user.is_staff %}
                         <th scope="col">Lot Number</th>
                     {% endif %}
@@ -131,7 +133,7 @@
                     <td class="{% if item.unscheduled_short > item.max_producible_quantity %}shortageFlag{% endif %}">{{ item.unscheduled_short|floatformat:2 }} gal</td> {% endcomment %}
                     <td class="{% if item.total_shortage > item.max_producible_quantity %}shortageFlag{% endif %}">{{ item.total_shortage|floatformat:2 }} gal</td>
                     
-                    <td class="text-center {% if item.schedule_value == 'Not Scheduled'%}blendStillNeeded{% endif %}">
+                    <td class="text-center {% if item.schedule_value == 'Not Scheduled' and item.start_time < 299 %}blendStillNeeded{% endif %}">
                         {% if item.schedule_value == "Not Scheduled" %}
                             Not Scheduled
                         {% else %}
@@ -147,7 +149,8 @@
                             </div>
                         {% endif %}
                     </td>
-                    <td>{{ item.shortage_after_blends|floatformat:2 }}</td>
+                    <td class="{% if item.shortage_after_blends < 299 %}blendStillNeeded{% endif %}">{{ item.shortage_after_blends|floatformat:2 }}</td>
+                    <td class="{% if item.shortage_after_blends < 299 %}blendStillNeeded{% endif %}">{{ item.short_quantity_after_blends|floatformat:2 }}{% if item.short_quantity_after_blends %} gal{% endif %}</td>
                     {% if user.is_staff %}
                         <td class="text-center lotNumCell">
                             <button class="btn btn-secondary lotNumButton" 
