Update column names on blendshortages

--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -45,8 +45,8 @@
                     <th scope="col" class="text-center">Unscheduled Short</th> {% endcomment %}
                     <th scope="col" class="text-center">Total Short</th>
                     <th scope="col" class="text-center">Schedule Status</th>
-                    <th scope="col" class="text-center">Shortage AFTER BLENDS</th>
-                    <th scope="col" class="text-center"></th>
+                    <th scope="col" class="text-center">When Short AFTER BLENDS</th>
+                    <th scope="col" class="text-center">Shortage Qty AFTER BLENDS</th>
                     
                     {% if user.is_staff %}
                         <th scope="col">Lot Number</th>
