Update transactions report

--- a/app/core/templates/core/reports/transactionsreport.html
+++ b/app/core/templates/core/reports/transactionsreport.html
@@ -20,6 +20,7 @@
                         <th scope="col">Part Number</th>
                         <th scope="col">Description</th>
                         <th scope="col">Entry No.</th>
+                        <th scope="col">Warehouse</th>
                         <th scope="col">Transaction Date</th>
                         <th scope="col">Transaction Type</th>
                         <th scope="col">Transaction Qty</th>
@@ -30,6 +31,7 @@
                         <td>{{ item_info.item_code }}</td>
                         <td>{{ item.item_description }}</td>
                         <td>{{ item.entryno }}</td>
+                        <td>{{ item.warehousecode }}</td>
                         <td>{{ item.transactiondate }}</td>
                         <td>
                             {% if item.transactioncode == "II" %}
