Add label printing to the blend schedule page.

--- a/app/core/static/core/css/blendSchedule.css
+++ b/app/core/static/core/css/blendSchedule.css
@@ -59,6 +59,11 @@ td {
     background-color: rgb(209, 209, 209);
 }
 
+.lot-number-cell {
+    display: flex;
+    align-items: center;
+}
+
 @media print {
     .site-header {
         display: none !important;
