--- a/app/core/templates/core/blendschedule.html
+++ b/app/core/templates/core/blendschedule.html
@@ -9,6 +9,7 @@
 
 {% block content %}
     {% include 'core/modals/add-lotnum-modal.html' %}
+    {% include 'core/modals/blendlabeltemplate.html' %}
 
 
     {% if blend_area == 'all' %}
