--- a/app/core/templates/core/blendschedules/desktwoschedule.html
+++ b/app/core/templates/core/blendschedules/desktwoschedule.html
@@ -42,7 +42,7 @@
                             </select>
                         {% endif %}
                     </td>
-                    <td class="lot-number-cell">
+                    <td class="lot-number-cell" lot-number="{{ item.lot }}">
                         {% if not item.lot == "******" %}
                             {{ item.lot }}
                             <div class="dropdown">
