Update notification for advance messages.

--- a/app/core/static/core/css/blendSchedule.css
+++ b/app/core/static/core/css/blendSchedule.css
@@ -103,3 +103,13 @@ td {
     }
 
 }
+
+.priorityMessage {
+    animation: pulsingRed 2s ease-in-out infinite;
+}
+
+@keyframes pulsingRed {
+    0% { background-color: transparent; }
+    50% { background-color: rgba(255, 62, 62, 0.804); }
+    100% { background-color: transparent; }
+}
