--- a/app/core/templates/core/modals/add-lotnum-modal.html
+++ b/app/core/templates/core/modals/add-lotnum-modal.html
@@ -37,7 +37,7 @@
                     
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                        <button type="submit" name="addNewLotNumRecord" value="Create New Lot"  class="btn btn-primary">Add</button>
+                        <button type="submit" name="addNewLotNumRecord" id="addNewLotNumRecord" value="Create New Lot"  class="btn btn-primary">Add</button>
                     </div>
                 </form>
             {% endif %}
